Correct scrollbar shadow

--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -1326,6 +1326,8 @@ scrollbar {
     min-height: 14px;
     margin: 0;
     border: 1px solid @borders;
+    border-top-color: mix(@theme_bg_color, @light_shadow, 0.7);
+    border-left-color: mix(@theme_bg_color, @light_shadow, 0.7);
     border-radius: 0px;
     background-clip: padding-box;
     background-color: @theme_bg_color;
